--- a/app/elements/prospectousfee-card/prospectousfee-card.html
+++ b/app/elements/prospectousfee-card/prospectousfee-card.html
@@ -95,7 +95,7 @@
             <div style="margin-left:12%;" hidden$="{{hiddeninstallment}}"> 
               <template  is="dom-repeat" items="{{feearr}}" as="view">
                 <appregfee-installment-card  hiddenpayflag="{{view.hiddenpayflag}}" modeofpayment="{{view.modeofpayment}}" paidflag="{{view.paidflag}}" readonlyflag="{{view.readonlyflag}}" hiddenflag="{{view.hiddenflag}}" installment="{{view.installment}}" installmenttype="{{view.installment_type}}" amount="{{view.payableamount}}" actualamount="{{view.actualamount}}"
-                discountamount="{{view.discountamount}}" installmentdate="{{view.installment_date}}" chequeno="{{view.chequeno}}" paiddate="{{view.paiddate}}"></appregfee-installment-card>
+                discountamount="{{view.discountamount}}" installmentdate="{{view.installment_date}}" chequeno="{{view.chequeno}}" paiddate="{{view.paiddate}}" fineamount="{{view.fineamount}}"></appregfee-installment-card>
               </template>
             </div>
             <div >
