--- a/app/elements/fees-service/fees-service.html
+++ b/app/elements/fees-service/fees-service.html
@@ -161,7 +161,7 @@
         obj.paiddate=cash[i].paiddate; 
         obj.paidstatus=cash[i].paidstatus;   
         obj.feecashcount=feecashcount;
-        obj.fineamount=0;  
+        obj.fineamount=cash[i].fineamount;  
         obj.receiveddate=localStorage.getItem("curr_sess_date");
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");   
@@ -237,7 +237,7 @@
         obj.paiddate=thirdparty[i].paiddate; 
         obj.paidstatus=thirdparty[i].paidstatus;   
         obj.feethirdpartycount=feethirdpartycount;
-        obj.fineamount=0;  
+        obj.fineamount=thirdparty[i].fineamount;  
         obj.receiveddate=localStorage.getItem("curr_sess_date");
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");  
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");
@@ -322,7 +322,7 @@
         obj.chequedate=cheque[i].chequedate; 
         obj.chequestatus=cheque[i].chequestatus; 
         obj.feechequecount=feechequecount;
-        obj.fineamount=0;
+        obj.fineamount=cheque[i].fineamount;  
         obj.receiveddate=localStorage.getItem("curr_sess_date"); 
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");
@@ -398,7 +398,7 @@
         obj.bankname=transfer[i].bankname; 
         obj.chequedate=transfer[i].chequedate;
         obj.feetransfercount=feetransfercount; 
-        obj.fineamount=0;
+        obj.fineamount=transfer[i].fineamount;  
         // alert(obj.chequedate);
         obj.receiveddate=localStorage.getItem("curr_sess_date");         
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");
