--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -1086,7 +1086,7 @@
         document.querySelector('app-list').setPage("pendingfee-report","Pending Fee Report");
         document.querySelector('pendingfee-report').ready();
         document.querySelector('pendingfee-report').FnRefresh();
-        document.querySelector('pendingfee-report').FnCallService();
+        // document.querySelector('pendingfee-report').FnCallService();
       },
       FnDetailduereport:function(){
         this.$.scheduleservice.fetchacademicyearService();
