--- a/app/elements/daycollection-report/daycollection-report.html
+++ b/app/elements/daycollection-report/daycollection-report.html
@@ -70,14 +70,17 @@
       <thead>
       <tr>
         <th>Sno</th><th>Enr/Enq No</th><th>Student Name</th><th>Grade</th>
-        <th>Type</th><th>Installment Type</th><th>Mode Of Payment</th><th>Cheque No</th><th>Bank Name</th><th>Cheque Date</th><th>Received Date</th><th>Receipt/Ack No</th><th>Actual Amount</th><th>Fine Amount</th><th>Latefee Amount</th><th>Adhoc Amount</th><th>Total Amount</th>
+        <th>Type</th><th>Installment Type</th><th>Mode Of Payment</th><th>Cheque No</th><th>Bank Name</th><th>Cheque Date</th><th>Received Date</th><th>Receipt/Ack No</th><th>Actual Amount</th><th>Fine Amount</th><!-- <th>Latefee Amount</th> -->
+        <th>Adhoc Amount</th><th>Total Amount</th>
       </tr>
       </thead>
       <tbody>
       <template  is="dom-repeat" items="{{daycollectionarr}}" as="item">
         <tr><td>{{item.sno}}</td><td>{{item.admission_no}}</td><td>{{item.student_name}}</td><td>{{item.grade}}</td><td>{{item.admission_status}}</td>
         <td>{{item.installment_type}}</td><td>{{item.mode_of_payment}}</td><td>{{item.cheque_no}}</td><td>{{item.bank_name}}</td><td>{{item.cheque_date}}</td><td>{{item.received_date}}</td>
-        <td>{{item.receipt_no}}</td><td>{{item.installment_amount}}</td><td>{{item.fine_amount}}</td><td>{{item.latefee_amount}}</td><td>{{item.adhoc_discount}}</td><td>{{item.total}}</td></tr>
+        <td>{{item.receipt_no}}</td><td>{{item.installment_amount}}</td><td>{{item.fine_amount}}</td>
+        <!-- <td>{{item.latefee_amount}}</td> -->
+        <td>{{item.adhoc_discount}}</td><td>{{item.total}}</td></tr>
       </template>
       <tr></tr>
       </tbody>
@@ -86,7 +89,7 @@
       <tr hidden$="{{hidetotal}}"><th colspan="8" style="text-align: right;">Total amount from CASH: &nbsp;&nbsp;</th><th>{{cashamount}}</th></tr>
       <tr><th colspan="8" style="text-align: right;">Total amount from CHEQUE: &nbsp;&nbsp;</th><th>{{chequeamount}}</th></tr>
       <tr><th colspan="8" style="text-align: right;">Total amount from NEFT/RTGS: &nbsp;&nbsp;</th><th>{{transferamount}}</th></tr>
-      <tr><th colspan="8" style="text-align: right;">Total amount from Cardswipe: &nbsp;&nbsp;</th><th>{{swipeamount}}</th></tr>
+      <tr><th colspan="8" style="text-align: right;">Total amount from CARD SWIPE: &nbsp;&nbsp;</th><th>{{swipeamount}}</th></tr>
       <tr><th colspan="8" style="text-align: right;">Grand Total: &nbsp;&nbsp;</th><th>{{totalamount}}</th></tr>
     </table>  
     </div>
