--- a/app/elements/fee-report-service/fee-report-service.html
+++ b/app/elements/fee-report-service/fee-report-service.html
@@ -293,6 +293,21 @@
           var dd1=d1+'/'+m1+'/'+y1;
           daycollection[i].cheque_date=dd1
           }
+          if(daycollection[i].latefee_amount==""||daycollection[i].latefee_amount==null||daycollection[i].latefee_amount==0){
+
+          }
+          else{
+          var d=new Date(daycollection[i].latefee_date);
+          var d1=d.getDate();
+          var m1=(d.getMonth())+1;
+          var y1=d.getFullYear();
+          if(d1<10)
+            d1='0'+d1;
+          if(m1<10)
+            m1='0'+m1;
+          var dd1=d1+'/'+m1+'/'+y1;
+          daycollection[i].latefee_date=dd1
+          }
           var dd=new Date(daycollection[i].received_date);
           var d2=dd.getDate();
           var m2=(dd.getMonth())+1;
@@ -303,7 +318,27 @@
             m2='0'+m2;
           var dd2=d2+'/'+m2+'/'+y2;
           daycollection[i].received_date=dd2;
-        }  
+        }
+
+        for(var i=0;i<daycollection.length;i++){
+          if(daycollection[i].latefee_amount>0){
+            var obj={};
+            obj.admission_no=daycollection[i].admission_no;
+            obj.student_name=daycollection[i].student_name;
+            obj.grade=daycollection[i].grade;
+            obj.admission_status=daycollection[i].admission_status;
+            obj.installment_type="Latefee";
+            obj.mode_of_payment=daycollection[i].latefee_paymentmode;
+            obj.cheque_no=daycollection[i].latefee_refno;
+            obj.bank_name=daycollection[i].latefee_bankname;
+            obj.received_date=daycollection[i].latefee_date;
+            obj.installment_amount=daycollection[i].latefee_amount;
+            obj.fine_amount=0;
+            obj.adhoc_discount=0;
+            daycollection.push(obj);
+          }
+        }
+
         for(var i=0;i<daycollection.length;i++){
           daycollection[i].sno=i+1;
           if(daycollection[i].cheque_no==""||daycollection[i].cheque_no==null||daycollection[i].cheque_no=="null"){
@@ -323,9 +358,9 @@
             daycollection[i].latefee_amount=0;
           if(daycollection[i].fine_amount==""||daycollection[i].fine_amount==null)
             daycollection[i].fine_amount=0;
-        var total=parseFloat(parseFloat(daycollection[i].installment_amount)+parseFloat(daycollection[i].fine_amount)+parseFloat(daycollection[i].adhoc_discount)+parseFloat(daycollection[i].latefee_amount)).toFixed(2);
+        var total=parseFloat(parseFloat(daycollection[i].installment_amount)+parseFloat(daycollection[i].fine_amount)+parseFloat(daycollection[i].adhoc_discount)).toFixed(2);
         daycollection[i].total=total;
-        totalamount=parseFloat(parseFloat(totalamount)+parseFloat(daycollection[i].installment_amount)+parseFloat(daycollection[i].fine_amount)+parseFloat(daycollection[i].adhoc_discount)+parseFloat(daycollection[i].latefee_amount)).toFixed(2);
+        totalamount=parseFloat(parseFloat(totalamount)+parseFloat(daycollection[i].installment_amount)+parseFloat(daycollection[i].fine_amount)+parseFloat(daycollection[i].adhoc_discount)).toFixed(2);
         }
         }
         else{
@@ -438,6 +473,7 @@
         var arr=e.detail.response.returnval;
 
         if(arr!='no rows'){
+
         for(var i=0;i<arr.length;i++){
           if(arr[i].cheque_no==""||arr[i].cheque_no==null||arr[i].cheque_no=="null"){
 
@@ -454,6 +490,21 @@
           var dd1=d1+'/'+m1+'/'+y1;
           arr[i].cheque_date=dd1
           }
+          if(arr[i].latefee_amount==""||arr[i].latefee_amount==null||arr[i].latefee_amount==0){
+
+          }
+          else{
+          var d=new Date(arr[i].latefee_date);
+          var d1=d.getDate();
+          var m1=(d.getMonth())+1;
+          var y1=d.getFullYear();
+          if(d1<10)
+            d1='0'+d1;
+          if(m1<10)
+            m1='0'+m1;
+          var dd1=d1+'/'+m1+'/'+y1;
+          arr[i].latefee_date=dd1
+          }
           var dd=new Date(arr[i].received_date);
           var d2=dd.getDate();
           var m2=(dd.getMonth())+1;
@@ -465,6 +516,26 @@
           var dd2=d2+'/'+m2+'/'+y2;
           arr[i].received_date=dd2;
         }  
+
+        for(var i=0;i<arr.length;i++){
+          if(arr[i].latefee_amount>0){
+            var obj={};
+            obj.admission_no=arr[i].admission_no;
+            obj.student_name=arr[i].student_name;
+            obj.grade=arr[i].grade;
+            obj.admission_status=arr[i].admission_status;
+            obj.installment_type="Latefee";
+            obj.mode_of_payment=arr[i].latefee_paymentmode;
+            obj.cheque_no=arr[i].latefee_refno;
+            obj.bank_name=arr[i].latefee_bankname;
+            obj.received_date=arr[i].latefee_date;
+            obj.installment_amount=arr[i].latefee_amount;
+            obj.fine_amount=0;
+            obj.adhoc_discount=0;
+            arr.push(obj);
+          }
+        }
+        
         for(var i=0;i<arr.length;i++){
           arr[i].sno=i+1;
           if(arr[i].cheque_no==""||arr[i].cheque_no==null||arr[i].cheque_no=="null"){
@@ -480,9 +551,9 @@
           // alert(JSON.stringify(arr[i].cheque_no));
           if(arr[i].adhoc_discount==""||arr[i].adhoc_discount==null)
             arr[i].adhoc_discount=0;
-        var total=parseFloat(parseFloat(arr[i].installment_amount)+parseFloat(arr[i].fine_amount)+parseFloat(arr[i].adhoc_discount)+parseFloat(arr[i].latefee_amount)).toFixed(2);
+        var total=parseFloat(parseFloat(arr[i].installment_amount)+parseFloat(arr[i].fine_amount)+parseFloat(arr[i].adhoc_discount)).toFixed(2);
         arr[i].total=total;
-        totalamount=parseFloat(parseFloat(totalamount)+parseFloat(arr[i].installment_amount)+parseFloat(arr[i].fine_amount)+parseFloat(arr[i].adhoc_discount)+parseFloat(arr[i].latefee_amount)).toFixed(2);
+        totalamount=parseFloat(parseFloat(totalamount)+parseFloat(arr[i].installment_amount)+parseFloat(arr[i].fine_amount)+parseFloat(arr[i].adhoc_discount)).toFixed(2);
         }
         }
         else{
