due cheques report

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -264,3 +264,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="process-report/process-report.html">
 <link rel="import" href="duereport-service/duereport-service.html">
 <link rel="import" href="dailyincome-report/dailyincome-report.html">
+<link rel="import" href="duecheques-report/duecheques-report.html">
