--- a/app/elements/schedule-service/schedule-service.html
+++ b/app/elements/schedule-service/schedule-service.html
@@ -445,6 +445,7 @@
         document.querySelector('dailycollection-dashboard').gradearr=gradearr;
         document.querySelector('process-report').gradearr=gradearr;
         document.querySelector('dailyincome-report').gradearr=gradearr;
+        document.querySelector('duecheques-report').gradearr=gradearr;
       },
       fetchgradeService:function(){       
         this.fetchgradeurl=sessionStorage.getItem("addrinfo")+"/fetchgrade-service"
