--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -290,7 +290,12 @@
             <div class="col-md-12">
               <dailyincome-report></dailyincome-report>
             </div>
-          </section>       
+          </section>  
+          <section data-category="duecheques-report">
+            <div class="col-md-12">
+              <duecheques-report></duecheques-report>
+            </div>
+          </section>     
           </iron-pages>
           </div>
           </div>
