--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -434,6 +434,9 @@
             <li id="tpcollectionreport">
             <a href="" aria-hidden="true" on-click="FnTPCollectionReport">Thirdparty Collection</a>
             </li>
+            <li id="duechequesreport">
+            <a href="" aria-hidden="true" on-click="FnDuechequesReport">Due Cheques</a>
+            </li>
             <li id="pdccheques">
             <a href="" aria-hidden="true" on-click="FnPdcCheques">PDC Cheques</a>
             </li>            
@@ -1001,6 +1004,12 @@
           document.querySelector('app-list').setPage("detaildaycollection-report","Daily Collection");
           document.querySelector('detaildaycollection-report').FnRefresh();
           document.querySelector('detaildaycollection-report').FnCallService();
+      },
+      FnDuechequesReport:function(){
+          this.$.scheduleservice.fetchgradeforreportService();
+          document.querySelector('app-list').setPage("duecheques-report","Due Cheques");
+          document.querySelector('duecheques-report').FnRefresh();
+          document.querySelector('duecheques-report').FnCallService();
       },
       FnDailyincomeReport:function(){
           this.$.scheduleservice.fetchgradeforreportService();
