third party report extension

--- a/app/elements/fee-report-service/fee-report-service.html
+++ b/app/elements/fee-report-service/fee-report-service.html
@@ -975,7 +975,7 @@
         var obj={"schoolid":"","fromdate":"","todate":""};
         obj.schoolid=localStorage.getItem("schoolid");
         obj.fromdate=localStorage.getItem("localsess_from_date");
-        // obj.todate=localStorage.getItem("localsess_to_date");
+        obj.todate=localStorage.getItem("localsess_to_date");
         obj.grade=grade;
         this.tpcollectionparam=obj;
         this.$.tpcollectionajax.generateRequest();
