--- a/app/elements/neevcollection-report/neevcollection-report.html
+++ b/app/elements/neevcollection-report/neevcollection-report.html
@@ -16,9 +16,9 @@
               <div class="col-md-2" style="margin-top: 2%;">
                   <fromdate-icon-pickercard></fromdate-icon-pickercard>
                 </div>
-                <!-- <div class="col-md-1" style="margin-top: 2%;margin-left: -3%;"> -->
-                  <!-- <todate-icon-pickercard></todate-icon-pickercard> -->
-                <!-- </div> -->
+                <div class="col-md-1" style="margin-top: 2%;margin-left: -3%;">
+                  <todate-icon-pickercard></todate-icon-pickercard>
+                </div>
                 <div class="col-sm-2" style="margin-left: 5%;">
                 <paper-dropdown-menu label="Grade" attr-for-selected="value">
                   <paper-menu id="tpcollectiongrade" class="dropdown-content" required on-iron-select="FnSelectGrade" valueattr="value" >
